# GCB_Analyzer

./: .gitignore  README.md
GCB_Analyzer/: CMakeLists.txt  README.md  build.sh  build_execute.sh
GCB_Analyzer/src/ApiServer/: Server.cpp
GCB_Analyzer/src/GCB/: Analyzer.cpp  ImgFunc.hpp
GCB_Analyzer/src/GCB/ImgFunc/: ImgProc.cpp  ImgSize.cpp
analyzer/: Dockerfile  execute.sh
analyzer/src/: ApiServer.hpp  GCB.hpp  main.cpp
client/: .gitignore  client.py  gcb_client.py  gcb_parser.py  makefile  resource_builder.py  result_analyzer.ipynb  sandbox.ipynb
client/dict/: dict_CL_Beacon_B1000.json  dict_CM_Beacon_B1000.json
client/input/: HRC33_lap28_230806_122855.json  I15_H_240fps_1_240113_134855.json  I15_H_30fps_1_240113_134759.json
description/: beacon_device_definition.json
simulator/: .gitignore  sandbox.ipynb  simulator_readme.md
simulator/parser/: beacon_device_definition.json  beacon_device_definition_cl.json  beacon_device_definition_m.json
